[tool.poetry]
name = "pynit"
version = "0.1.0"
description = "an integration between reddit.com and pinboard.in"
authors = ["josiah <me@jowj.net>"]
license = "unlicense"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
praw = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
